--- a/views/signin.dust
+++ b/views/signin.dust
@@ -1,17 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>{+title}Welcome to my site{/title}</title>
+    <title>{+title}Welcome to SpinCo{/title}</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <script type="text/javascript" src='/javascripts/utils.js'></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    {+http_header/}
 </head>
 <body>
 {>header /}
 <div id="wrapper">
-    <p>Welcome to WEBSITE, lot of things to do here.</p>
+    <div id="content">
+        <p>You have been sucessfully signed in, you will be now taken to YAHOO domain with logged in experience<p>
+    </div>
 </div>
 {>footer /}
+
+<script>
+alert('redirect to new site');
+</script>
+
 </body>
 </html>
