refactoring view files

--- a/templates/default.desktop.normal.index.page.dust
+++ b/templates/default.desktop.normal.index.page.dust
@@ -3,13 +3,18 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{title}</title>
+    <title>Welcome to WEBSITE</title>
     <script type="text/javascript" src='/javascripts/utils.js'></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://s.yimg.com/sv/ms20/css/0.91/ysb-common.css">
     {+http_header/}
 </head>
 <body>
-{bodycontent}
+    {>header /}
+<div id="wrapper">
+    <p>PRESALES / PROMO CONTENT</p>
+    <p>Already have an account? <a href="/login">Sign In</a></p>
+</div>
+    {>footer /}
 </body>
 </html>
