--- a/templates/default.desktop.normal.forgotpassword.page.dust
+++ b/templates/default.desktop.normal.forgotpassword.page.dust
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://s.yimg.com/sv/ms20/css/0.91/ysb-common.css">
 </head>
 <body>
-    {>header /}
+    {>"default.desktop.normal.header.layout.dust" /}
 <div id="wrapper">
     <h2>Forgot Your Password ?</h2>
     <h3>Don't worry. We'll help you get back into your account.</h3>
@@ -22,6 +22,6 @@
     </form>
     <p><a href="/login">Back to sign in</a></p>
 </div>
-    {>footer /}
+    {>"default.desktop.normal.footer.layout.dust" /}
 </body>
 </html>
