--- a/templates/default.desktop.normal.passwordresetconfirmation.page.dust
+++ b/templates/default.desktop.normal.passwordresetconfirmation.page.dust
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://s.yimg.com/sv/ms20/css/0.91/ysb-common.css">
 </head>
 <body>
-    {>header /}
+    {>"default.desktop.normal.header.layout.dust" /}
 <div id="wrapper">
     <h2>Your Password has been reset!</h2>
     <h3>We've sent an email to {emailaddress} with a new temporary password and instructions how to set a new one.</h3>
@@ -17,6 +17,6 @@
     <h3>Need assistance? Call us at 1-888-123-5432 {US.supportnumber}.</h3>
     <p><a href="/login">Back to sign in</a></p>
 </div>
-    {>footer /}
+    {>"default.desktop.normal.footer.layout.dust" /}
 </body>
 </html>
