--- a/templates/default.desktop.normal.login.page.dust
+++ b/templates/default.desktop.normal.login.page.dust
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://s.yimg.com/sv/ms20/css/0.91/ysb-common.css">
 </head>
 <body>
-    {>header /}
+    {>"default.desktop.normal.header.layout.dust" /}
 <div id="wrapper">
     <h2>Sign in to WEBSITE</h2>
     <h3>Welcome back! Log in to your account and complete your purchase.</h3>
@@ -22,6 +22,6 @@
     </form>
     <p>Don't have an account? <a href="/registration">Create one</a></p>
 </div>
-    {>footer /}
+    {>"default.desktop.normal.footer.layout.dust" /}
 </body>
 </html>
