--- a/templates/default.desktop.normal.forgotpassword.page.dust
+++ b/templates/default.desktop.normal.forgotpassword.page.dust
@@ -14,7 +14,7 @@
     <h2>Forgot Your Password ?</h2>
     <h3>Don't worry. We'll help you get back into your account.</h3>
     <h3>To reset your password, enter the email you use to log in.</h3>
-    <form method="POST" action="/signin">
+    <form method="POST" action="/passwordreset">
         <p><label for="s-user"><span style="display: inline-block; width: 150px; text-align: right;">Email: </span></label><input type="text" name="userid" id="s-user" value=""></p>
         <br/><p style="display: inline-block; width: 270px; text-align: right;"><button class="button-tertiary">Reset Password</button></p>
 
