--- a/templates/default.desktop.normal.forgotpassword.page.dust
+++ b/templates/default.desktop.normal.forgotpassword.page.dust
@@ -18,7 +18,7 @@
         <p><label for="s-user"><span style="display: inline-block; width: 150px; text-align: right;">Email: </span></label><input type="text" name="userid" id="s-user" value=""></p>
         <br/><p style="display: inline-block; width: 270px; text-align: right;"><button class="button-tertiary">Reset Password</button></p>
 
-        <p>{csrfToken}<input type="hidden" name="_csrf" value="{csrfToken}"></p>
+        <p><input type="hidden" name="_csrf" value="{csrfToken}"></p>
     </form>
     <p><a href="/login">Back to sign in</a></p>
 </div>
